# sabreR

./: MD5  NAMESPACE  configure  configure.ac
R/: print.sabre.R  sabre.R  zzz.R
data/: drvisits.tab  growth.tab  schiz.tab  tu.tab
demo/: 00Index  drvisits.R  growth.R  schiz.R  tu.R
inst/Sabre/include/: accmac.h  chans.h  fildat.h  mpi_info.h
inst/Sabre/src/: Makefile.in  accurate.f90  accurate_arithmetic.mod  config.status  estimatesmod.mod  fefit.f90  hsl_ma57.f90  hsl_ma57_double.mod  hsl_zd01_char.mod  hsl_zd01_double.mod  hsl_zd01_mod.f90  ma57.f90  ma57_blas.f90  ma57_dep.f90  macdep_parallel.f90  macdep_serial.f90  memory.f90  memory.mod  metis_dummy.f90  sabre.f90  sabre_mpi.f90
man/: drvisits.Rd  growth.Rd  print.sabre.Rd  sabre.Rd  schiz.Rd  tu.Rd
src/: a_hsl_zd01.f90  a_memory.f90  accmac.h  accurate.f90  bridge.f90  chans.h  fildat.h  hsl_ma57.f90  limitsf90.h  lsbore.f90  lsbore_acc.f90  lsdore.f90  lsdore_acc.f90  lshbeq.f90  lshbeq_acc.f90  lshbiv.f90  lshbiv_acc.f90  lshdep.f90  lshdep_acc.f90  lshmlm.f90  lshmlm_acc.f90  lshord.f90  lshord_acc.f90  lshore.f90  lshore_acc.f90  lshtri.f90  lshtri_acc.f90  lshuni.f90  lshuni_acc.f90  lstore.f90  lstore_acc.f90  ma57.f90  ma57_blas.f90  ma57_dep.f90  macdep_parallel.f90  metis_dummy.f90  mpif.h  sabre.f90  sabre_mpi.h
